inclusão dos testes do endpot cooperativaRest

--- a/parametrizacao-bi-impl/build.gradle
+++ b/parametrizacao-bi-impl/build.gradle
@@ -13,4 +13,10 @@ dependencies {
     compile('org.springframework.boot:spring-boot-starter-web')
     runtime('org.postgresql:postgresql')    
     compile group: 'com.fasterxml.jackson.datatype', name: 'jackson-datatype-jsr310', version: '2.6.5'
+    testCompile 'io.rest-assured:rest-assured:3.2.0'
+    compile 'io.rest-assured:json-path:3.2.0'
+    compile 'io.rest-assured:xml-path:3.2.0'
+    testCompile 'io.rest-assured:json-schema-validator:3.2.0'
+    testCompile group: 'com.jayway.restassured', name: 'rest-assured', version: '2.9.0'
+    compile group: 'io.rest-assured', name: 'json-schema-validator', version: '3.2.0'
 }
