--- a/parametrizacao-bi-ct-test/build.gradle
+++ b/parametrizacao-bi-ct-test/build.gradle
@@ -2,4 +2,10 @@ dependencies {
 		compile(unicredServicesDependencies.apitest)	
 		testCompile project(":parametrizacao-bi-api")
 		testCompile project(":parametrizacao-bi-impl")
+		testCompile 'io.rest-assured:rest-assured:3.2.0'
+    compile 'io.rest-assured:json-path:3.2.0'
+    compile 'io.rest-assured:xml-path:3.2.0'
+    testCompile 'io.rest-assured:json-schema-validator:3.2.0'
+    testCompile group: 'com.jayway.restassured', name: 'rest-assured', version: '2.9.0'
+    compile group: 'io.rest-assured', name: 'json-schema-validator', version: '3.2.0'
 }
